@@ -1,8 +1,10 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
 changes relative to sbcl-1.3.19:
-  * bug fix: the low-level debugger would erroneously print or not print
-    as the case may be, "(bad-address)" for some objects depending whether
+  * optimization: a valueless &AUX binding in a BOA constructor does not
+    force all slots reads in safe code to perform a full type check.
+  * bug fix: the low-level debugger would erroneously print - or not print
+    as the case may be - "(bad-address)" for some objects depending whether
     the --dynamic-space-size argument was used at Lisp startup
 
 changes in sbcl-1.3.19 relative to sbcl-1.3.18:
